aob-devops/app/traefik-svc.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller-svc
  labels:
    k8s-app: traefik-ingress-lb-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb-svc
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb-svc
        name: traefik-ingress-lb-svc
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-svc
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8081
        args:
        - --web
        - --kubernetes
        - --logLevel=ERROR
        - --web.address=:8081
        - --kubernetes.labelselector=app=svc
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-svc
spec:
  selector:
    k8s-app: traefik-ingress-lb-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
      nodePort: 31462
    - protocol: TCP
      port: 443
      name: https
      targetPort: 443
      nodePort: 30342
  type: NodePort
